--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postinstall": "npm run build && skpm-link"
   },
   "devDependencies": {
-    "@skpm/builder": "^0.5.2"
+    "@skpm/builder": "^0.5.2",
+    "babel-preset-env": "^1.6.1"
   }
 }
