--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "polyglot",
   "version": "0.1.0",
+  "repository": "https://github.com/fruitfrills/polyglot.git",
+  "description": "Text translations",
   "engines": {
     "sketch": ">=3.0"
   },
